force-app/main/default/objects/CRM_Global_CaseAssociatedItem__c/CRM_Global_CaseAssociatedItem__c.object-meta.xml
<CustomObject>
    <label>Case Associated Item</label>
    <nameField>
        <displayFormat>CA-{000000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Associated Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>