force-app/main/default/objects/CRM_Global_CaseAssociatedItem__c/fields/CRM_Global_AttemptRecordType__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_AttemptRecordType__c</fullName>
    <label>Attempt Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outbound Call</fullName>
            </value>
            <value>
                <fullName>Call Transfer</fullName>
            </value>
            <value>
                <fullName>Agent Call-in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>