force-app/main/default/objects/CRM_Global_CaseAssociatedItem__c/fields/CRM_Global_CallAttemptOwner__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_CallAttemptOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call/Attempt Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Associated_Items</relationshipName>
    <type>Lookup</type>
</CustomField>