force-app/main/default/objects/CRM_Global_CaseAssociatedItem__c/fields/CRM_Global_CallAttemptResult__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_CallAttemptResult__c</fullName>
    <label>Call/Attempt Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>Voicemail</fullName>
            </value>
            <value>
                <fullName>Reached</fullName>
            </value>
            <value>
                <fullName>Pending - UR</fullName>
            </value>
            <value>
                <fullName>Busy Tone</fullName>
            </value>
            <value>
                <fullName>Reschedule</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Invalid No.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>