force-app/main/default/objects/CRM_Global_CaseAssociatedItem__c/fields/CRM_Global_CallerIdentity__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_CallerIdentity__c</fullName>
    <label>Caller Identity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Policy Owner</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>3 Party</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>Blockage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>