force-app/main/default/objects/CRM_Global_CaseAssociatedItem__c/fields/CRM_Global_Case__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Associated Items</relationshipLabel>
    <relationshipName>Case_Associated_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>