force-app/main/default/objects/CRM_Global_CaseAssociatedItem__c/fields/CRM_Global_Channel__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Letter</fullName>
            </value>
            <value>
                <fullName>Walk-in</fullName>
            </value>
            <value>
                <fullName>Defer Chat</fullName>
            </value>
            <value>
                <fullName>E-enquiry</fullName>
            </value>
            <value>
                <fullName>Virtual Meeting</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>