force-app/main/default/objects/CRM_Global_CaseAssociatedItem__c/fields/CRM_Global_ContactNo__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_ContactNo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>