force-app/main/default/objects/CRM_Global_CaseAssociatedItem__c/fields/CRM_Global_EnquirySummary__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_EnquirySummary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Enquiry Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>