force-app/main/default/objects/CRM_Global_CaseAssociatedItem__c/fields/CRM_Global_FinalResult__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_FinalResult__c</fullName>
    <formula>IF( ISBLANK( TEXT(CRM_Global_CallAttemptResult__c)),  TEXT(CRM_Global_Case__r.CRM_Global_FinalResult__c), null)</formula>
    <label>Final Result</label>
    <type>Text</type>
</CustomField>