force-app/main/default/objects/CRM_Global_CaseAssociatedItem__c/fields/CRM_Global_InteractionDateTime__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_InteractionDateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interaction DateTime</label>
    <type>DateTime</type>
</CustomField>