force-app/main/default/objects/CRM_Global_CaseAssociatedItem__c/fields/CRM_Global_InteractionId__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_InteractionId__c</fullName>
    <description>Used to store the following object SF Id:

Voice Call: When the origin is an inbound call
Experience: When the origin is the defer chat
Email Experience: When the origin is the Email
Activity: When the origin are walk-in, letter, virtual meeting</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Interaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>