force-app/main/default/objects/CRM_Global_CaseAssociatedItem__c/fields/CRM_Global_InteractionLink__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_InteractionLink__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interaction Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>