force-app/main/default/objects/CRM_Global_CaseAssociatedItem__c/fields/CRM_Global_RelatedInteraction__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_RelatedInteraction__c</fullName>
    <formula>HYPERLINK(CRM_Global_InteractionId__c, &quot;Activity&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Interaction</label>
    <type>Text</type>
</CustomField>