force-app/main/default/objects/CRM_Global_CaseAssociatedItem__c/fields/CRM_Global_RelatedPolicy__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_RelatedPolicy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Policy</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Case Associated Items</relationshipLabel>
    <relationshipName>Case_Associated_Items</relationshipName>
    <type>Lookup</type>
</CustomField>