force-app/main/default/objects/CRM_Global_CaseAssociatedItem__c/fields/CRM_Global_ReplyType__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_ReplyType__c</fullName>
    <label>Reply Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>