force-app/main/default/objects/CRM_Global_CaseAssociatedItem__c/fields/CRM_Global_VoiceCall__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_VoiceCall__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voice Call</label>
    <referenceTo>VoiceCall</referenceTo>
    <relationshipLabel>Case Associated Items</relationshipLabel>
    <relationshipName>Wrap_Ups</relationshipName>
    <type>Lookup</type>
</CustomField>