force-app/main/default/objects/CRM_Global_CaseAssociatedItem__c/fields/CRM_Global_WrapUp__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_WrapUp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wrap Up</label>
    <referenceTo>CRM_Global_CaseAssociatedItem__c</referenceTo>
    <relationshipLabel>Case Associated Items</relationshipLabel>
    <relationshipName>Wrap_Up_Details</relationshipName>
    <type>Lookup</type>
</CustomField>