force-app/main/default/objects/CRM_Global_CaseAssociatedItem__c/fields/CRM_Global_WrapUpCategory__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_WrapUpCategory__c</fullName>
    <label>Wrap Up Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UI Enquiry</fullName>
            </value>
            <value>
                <fullName>PA Enquiry</fullName>
            </value>
            <value>
                <fullName>Claims Enquiry</fullName>
            </value>
            <value>
                <fullName>Policy Enquiry</fullName>
            </value>
            <value>
                <fullName>PX &amp; Cashiering</fullName>
            </value>
            <value>
                <fullName>REQ Documents</fullName>
            </value>
            <value>
                <fullName>myPrudential</fullName>
            </value>
            <value>
                <fullName>myPrudential - DIY</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Opt in</fullName>
            </value>
            <value>
                <fullName>Incident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>