force-app/main/default/objects/CRM_Global_CaseAssociatedItem__c/fields/CRM_Global_WrapUpItem__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_WrapUpItem__c</fullName>
    <label>Wrap Up Item</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CRM_Global_WrapUpCategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UI Procedure</fullName>
            </value>
            <value>
                <fullName>UI Status</fullName>
            </value>
            <value>
                <fullName>PA Procedure</fullName>
            </value>
            <value>
                <fullName>PA Status</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>CL Procedure</fullName>
            </value>
            <value>
                <fullName>CL status</fullName>
            </value>
            <value>
                <fullName>Policy Status, premium amount and PTD</fullName>
            </value>
            <value>
                <fullName>Plan Coverage &amp; Sum Assured</fullName>
            </value>
            <value>
                <fullName>Policy Value &amp; Surrender Value</fullName>
            </value>
            <value>
                <fullName>Lumpsum Top-up</fullName>
            </value>
            <value>
                <fullName>APL &amp; Loan</fullName>
            </value>
            <value>
                <fullName>PDA/Suspense</fullName>
            </value>
            <value>
                <fullName>Bonus Enquiry</fullName>
            </value>
            <value>
                <fullName>Fund Enquiry</fullName>
            </value>
            <value>
                <fullName>DDA set up &amp; status</fullName>
            </value>
            <value>
                <fullName>Payment method</fullName>
            </value>
            <value>
                <fullName>Payment status &amp; Receipt</fullName>
            </value>
            <value>
                <fullName>Overpayment &amp; Refund</fullName>
            </value>
            <value>
                <fullName>Floating Rate</fullName>
            </value>
            <value>
                <fullName>REQ AVY statement</fullName>
            </value>
            <value>
                <fullName>REQ Premium Notices &amp; Receipts</fullName>
            </value>
            <value>
                <fullName>REQ Tax Letter</fullName>
            </value>
            <value>
                <fullName>REQ Policy Change Confirmation</fullName>
            </value>
            <value>
                <fullName>REQ Claims Confirmation</fullName>
            </value>
            <value>
                <fullName>REQ Other documents</fullName>
            </value>
            <value>
                <fullName>Registration &amp; login issue</fullName>
            </value>
            <value>
                <fullName>App Performance</fullName>
            </value>
            <value>
                <fullName>Change Of Contact Details</fullName>
            </value>
            <value>
                <fullName>Fund Switching</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>