force-app/main/default/objects/CRM_Global_CaseAssociatedItem__c/recordTypes/Reply.recordType-meta.xml
<RecordType>
    <fullName>Reply</fullName>
    <active>true</active>
    <label>Reply</label>
</RecordType>