force-app/main/default/objects/CRM_Global_CaseAssociatedItem__c/recordTypes/Wrap_Up.recordType-meta.xml
<RecordType>
    <fullName>Wrap_Up</fullName>
    <active>true</active>
    <label>Wrap Up</label>
</RecordType>