force-app/main/default/objects/CRM_Global_CaseAssociatedItem__c/recordTypes/Wrap_Up_Details.recordType-meta.xml
<RecordType>
    <fullName>Wrap_Up_Details</fullName>
    <active>true</active>
    <label>Wrap Up Details</label>
</RecordType>